create main body columns and welcome banner

--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,38 @@
 .container {
   margin-left: 180px;
 }
+
+#welcome {
+  background-color: lightblue;
+  padding: 5px;
+  border: 1px solid black;
+  margin: 5px;
+}
+#left-col {
+  height: 550px;
+  background-color: lightyellow;
+  padding: 0px;
+  border: 0px solid yellow;
+  margin: 0px;
+  float:left;
+}
+#yellow-heading {
+  background-color: yellow;
+  padding: 2px;
+  border: 1px solid orange;
+  margin: 5px;
+}
+#right-col {
+  height: 550px;
+  background-color: lightgreen;
+  padding: 0px;
+  border: 0px solid green;
+  margin: 0px;
+  float:right;
+}
+#green-heading {
+  background-color: green;
+  padding: 2px;
+  border: 1px solid blue;
+  margin: 5px;
+}
